	Fixed bug where table background wasn't visible inside the editor due to a default CSS rule overriding the style attribute.
	Fixed bug where links would get a null class added if no styles was used in IE.
	Fixed bug where spellchecker was auto focusing the editor in IE.
	Fixed bug where document.domain would produce invalid argument if the editor was loaded in IE6 over a network UNC path.
	Fixed so the custom context menu can be disabled by holding down ctrl key while clicking.
	Fixed so the layout for the o2k7 skin looks better if you don't have separators before and after list boxes.
	Fixed so the sub classes get a copy of the super class constructor function to ease up type checking.
Version 3.0.3 (2008-03-03)
	Fixed bug where an error about document.domain would be thrown if TinyMCE was loaded using a different port.
	Fixed bug where mode exact would convert textareas without id or name if the elements option was omitted.
	Fixed bug where the caret could be placed at an incorrect location when backspace was used in Gecko.
	Fixed bug where local file:// URLs where converted into absolute domain URLs.
	Fixed bug where an error was produced if a editor was removed inside an editor command.
	Fixed bug where force_p_newlines didn't effect the paste plugin correctly.
	Fixed bug where the paste plugin was producing an exception on IE if you pasted contents with middots.
	Fixed bug where delete key could produce exceptions in Gecko sometimes due to the fix for the table cell bug.
	Fixed bug where the layer plugin would produce an visual add class called mceVisualAid this one is now renamed to mceItemVisualAid to mark it internal.
	Fixed bug where TinyMCE wouldn't initialize properly if ActiveX controls was disabled in IE.
	Fixed bug where tables and other elements that had visual aids on them would produce an extra space after any custom class names.
	Fixed bug where search with an empty string would produce some odd "invalid pointer" error in IE.